--- a/index.html
+++ b/index.html
@@ -378,13 +378,13 @@
                 <div class="col-3 bg-blue p-2 d-none d-md-block">
                     <div class="col-12">
                         <div class="col-12">
-                            <a href="https://91.233.198.11/daftar-live-casino-sportsbook">
+                            <a href="/register.html">
                                 <img src="https://rgocasino-s3.s3-ap-southeast-1.amazonaws.com/images/others/halamandepancardgames.jpg"
                                     class="img-fluid">
                             </a>
                         </div>
                         <div class="col-12">
-                            <a href="https://91.233.198.11/daftar-live-casino-sportsbook">
+                            <a href="/register.html">
                                 <img src="https://rgocasino-s3.s3-ap-southeast-1.amazonaws.com/images/others/halamadepandd.jpg"
                                     class="img-fluid">
                             </a>
@@ -456,73 +456,73 @@
             <div class="col-12 my-3">
                 <div class="row">
                     <div class="col-12 col-md-3 mt-3">
-                        <a href="https://91.233.198.11/daftar-live-casino-sportsbook">
+                        <a href="/dingdong.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/LOBBY-RGO-CASINO-dingdong.png">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3">
-                        <a href="https://91.233.198.11/daftar-live-casino-sportsbook">
+                        <a href="/card-games.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/banner-hkbgaming.jpg">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="https://91.233.198.11/daftar-live-casino-sportsbook">
+                        <a href="/register.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/rgocasino-lobby-ogplus.png?2">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="https://91.233.198.11/daftar-live-casino-sportsbook">
+                        <a href="/register.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/rgocasino-vivo-lobbygame.jpg">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="https://91.233.198.11/daftar-live-casino-sportsbook">
+                        <a href="/dingdong.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/LOBBY-RGO-CASINO-dingdong.png">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="https://91.233.198.11/daftar-live-casino-sportsbook">
+                        <a href="/card-games.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/banner-hkbgaming.jpg">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="https://91.233.198.11/daftar-live-casino-sportsbook">
+                        <a href="/register.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/rgocasino-lobby-ogplus.png?2">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="https://91.233.198.11/daftar-live-casino-sportsbook">
+                        <a href="/register.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/rgocasino-vivo-lobbygame.jpg">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="https://91.233.198.11/daftar-live-casino-sportsbook">
+                        <a href="/dingdong.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/LOBBY-RGO-CASINO-dingdong.png">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="https://91.233.198.11/daftar-live-casino-sportsbook">
+                        <a href="/card-games.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/banner-hkbgaming.jpg">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="https://91.233.198.11/daftar-live-casino-sportsbook">
+                        <a href="/register.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/rgocasino-lobby-ogplus.png?2">
                         </a>
                     </div>
                     <div class="col-12 col-md-3 mt-3 d-none d-md-block">
-                        <a href="https://91.233.198.11/daftar-live-casino-sportsbook">
+                        <a href="/register.html">
                             <img class="img-fluid"
                                 src="https://91.233.198.11/_aps4497/assets/images/lobbyrgocasino/rgocasino-vivo-lobbygame.jpg">
                         </a>
