[ridho]- refactor page url nav - WIP

--- a/dingdong.html
+++ b/dingdong.html
@@ -95,7 +95,7 @@
                     <div id="navigation" style="width:100%; padding:0;">
                         <ul id="nav" style="width:100%; padding:0;">
                             <li class="nav-item first-nav-item">
-                                <a href="/" class="nav-a">
+                                <a href="/frontent-assesment/" class="nav-a">
                                     <span>
                                         <strong>Home</strong>
                                     </span>
@@ -110,7 +110,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="/register.html" class="nav-a">
+                                <a href="/frontent-assesment/register.html" class="nav-a">
                                     <span>
                                         <strong>Daftar</strong>
                                     </span>
@@ -155,7 +155,7 @@
                     <div style="width:100%; padding:0;">
                         <ul id="subnav" style="width:100%; padding:0;">
                             <li class="sub-nav-item default-subnav-item">
-                                <a class="subnav-a" href="/dingdong.html">
+                                <a class="subnav-a" href="/frontent-assesment/dingdong.html">
                                     <span class="subnav-span">
                                         <strong>Dingdong</strong>
                                     </span>
@@ -179,7 +179,7 @@
                                 <span class="sub-nav-separator"></span>
                             </li>
                             <li class="sub-nav-item default-subnav-item">
-                                <a class="subnav-a" href="/card-games.html">
+                                <a class="subnav-a" href="/frontent-assesment/card-games.html">
                                     <span class="subnav-span">
                                         <strong>Card Games</strong>
                                     </span>
@@ -222,7 +222,7 @@
                             </a>
                         </div>
                         <div class="col-6 text-center">
-                            <a href="/">
+                            <a href="/frontent-assesment/">
                                 <img src="https://91.233.198.11/m/assets/images/logo-rgocasino.png" width="170px"
                                     style="margin-top:6px;max-width:100%">
                             </a>
@@ -277,7 +277,7 @@
                             </div>
                             <hr>
                             <div class="d-flex justify-content-between mb-3">
-                                <a href="/register.html">Daftar Baru</a>
+                                <a href="/frontent-assesment/register.html">Daftar Baru</a>
                                 <a href="#" class="text-end">Lupa Password</a>
                             </div>
                         </form>
@@ -295,7 +295,7 @@
                     <h5 class="text-sm fw-bold">Menu</h5>
                     <div class="row" style="margin-bottom: 0px;">
                         <div class="col-4 text-center">
-                            <a href="/" class="btn btn-sm btn-info font-white" style="width:100%;font-size:10px;">
+                            <a href="/frontent-assesment/" class="btn btn-sm btn-info font-white" style="width:100%;font-size:10px;">
                                 <i class="fa fa-home"></i><br>Home
                             </a>
                         </div>
@@ -350,86 +350,86 @@
                             <div class="row">
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="img-fluid mt-3"
                                                 src="https://91.233.198.11/_aps4497/assets/images/dingdong/dd36d.jpg?1">
                                         </a>
                                         <div class="btn-cardgame2">
-                                            <a href="/register.html" class="btn btn-danger text-sm">Real Play</a>
+                                            <a href="/frontent-assesment/register.html" class="btn btn-danger text-sm">Real Play</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="img-fluid mt-3"
                                                 src="https://91.233.198.11/_aps4497/assets/images/dingdong/dd24d.jpg?1">
                                         </a>
                                         <div class="btn-cardgame2">
-                                            <a href="/register.html" class="btn btn-danger text-sm">Real Play</a>
+                                            <a href="/frontent-assesment/register.html" class="btn btn-danger text-sm">Real Play</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="img-fluid mt-3"
                                                 src="https://91.233.198.11/_aps4497/assets/images/dingdong/dd12d.jpg?1">
                                         </a>
                                         <div class="btn-cardgame2">
-                                            <a href="/register.html" class="btn btn-danger text-sm">Real Play</a>
+                                            <a href="/frontent-assesment/register.html" class="btn btn-danger text-sm">Real Play</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="img-fluid mt-3"
                                                 src="https://91.233.198.11/_aps4497/assets/images/dingdong/ddsicbo.jpg?1">
                                         </a>
                                         <div class="btn-cardgame2">
-                                            <a href="/register.html" class="btn btn-danger text-sm">Real Play</a>
+                                            <a href="/frontent-assesment/register.html" class="btn btn-danger text-sm">Real Play</a>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="img-fluid mt-3"
                                                 src="https://91.233.198.11/_aps4497/assets/images/dingdong/dddt.jpg?1">
                                         </a>
                                         <div class="btn-cardgame2">
-                                            <a href="/register.html" class="btn btn-danger text-sm">Real Play</a>
+                                            <a href="/frontent-assesment/register.html" class="btn btn-danger text-sm">Real Play</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="img-fluid mt-3"
                                                 src="https://91.233.198.11/_aps4497/assets/images/dingdong/ddbr.jpg?1">
                                         </a>
                                         <div class="btn-cardgame2">
-                                            <a href="/register.html" class="btn btn-danger text-sm">Real Play</a>
+                                            <a href="/frontent-assesment/register.html" class="btn btn-danger text-sm">Real Play</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="img-fluid mt-3"
                                                 src="https://91.233.198.11/_aps4497/assets/images/dingdong/ddpd.jpg">
                                         </a>
                                         <div class="btn-cardgame2">
-                                            <a href="/register.html" class="btn btn-danger text-sm">Real Play</a>
+                                            <a href="/frontent-assesment/register.html" class="btn btn-danger text-sm">Real Play</a>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-3">
-                                    <div class="cardgame"><a href="/register.html"><img class="img-fluid mt-3"
+                                    <div class="cardgame"><a href="/frontent-assesment/register.html"><img class="img-fluid mt-3"
                                                 src="https://91.233.198.11/_aps4497/assets/images/dingdong/dd48d.jpg"></a>
-                                        <div class="btn-cardgame2"><a href="/register.html"
+                                        <div class="btn-cardgame2"><a href="/frontent-assesment/register.html"
                                                 class="btn btn-danger text-sm">Real Play</a></div>
                                     </div>
                                 </div>
