--- a/card-games.html
+++ b/card-games.html
@@ -95,7 +95,7 @@
                     <div id="navigation" style="width:100%; padding:0;">
                         <ul id="nav" style="width:100%; padding:0;">
                             <li class="nav-item first-nav-item">
-                                <a href="/" class="nav-a">
+                                <a href="/frontent-assesment/" class="nav-a">
                                     <span>
                                         <strong>Home</strong>
                                     </span>
@@ -110,7 +110,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="/register.html" class="nav-a">
+                                <a href="/frontent-assesment/register.html" class="nav-a">
                                     <span>
                                         <strong>Daftar</strong>
                                     </span>
@@ -155,7 +155,7 @@
                     <div style="width:100%; padding:0;">
                         <ul id="subnav" style="width:100%; padding:0;">
                             <li class="sub-nav-item default-subnav-item">
-                                <a class="subnav-a" href="/dingdong.html">
+                                <a class="subnav-a" href="/frontent-assesment/dingdong.html">
                                     <span class="subnav-span">
                                         <strong>Dingdong</strong>
                                     </span>
@@ -179,7 +179,7 @@
                                 <span class="sub-nav-separator"></span>
                             </li>
                             <li class="sub-nav-item default-subnav-item">
-                                <a class="subnav-a" href="/card-games.html">
+                                <a class="subnav-a" href="/frontent-assesment/card-games.html">
                                     <span class="subnav-span">
                                         <strong>Card Games</strong>
                                     </span>
@@ -222,7 +222,7 @@
                             </a>
                         </div>
                         <div class="col-6 text-center">
-                            <a href="/">
+                            <a href="/frontent-assesment/">
                                 <img src="https://91.233.198.11/m/assets/images/logo-rgocasino.png" width="170px"
                                     style="margin-top:6px;max-width:100%">
                             </a>
@@ -277,7 +277,7 @@
                             </div>
                             <hr>
                             <div class="d-flex justify-content-between mb-3">
-                                <a href="/register.html">Daftar Baru</a>
+                                <a href="/frontent-assesment/register.html">Daftar Baru</a>
                                 <a href="#" class="text-end">Lupa Password</a>
                             </div>
                         </form>
@@ -295,7 +295,7 @@
                     <h5 class="text-sm fw-bold">Menu</h5>
                     <div class="row" style="margin-bottom: 0px;">
                         <div class="col-4 text-center">
-                            <a href="/" class="btn btn-sm btn-info font-white" style="width:100%;font-size:10px;">
+                            <a href="/frontent-assesment/" class="btn btn-sm btn-info font-white" style="width:100%;font-size:10px;">
                                 <i class="fa fa-home"></i><br>Home
                             </a>
                         </div>
@@ -350,7 +350,7 @@
                             <div class="row">
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="mt-3 img-fluid"
                                                 src="https://91.233.198.11/_aps4497/assets/images/cardgames/poker.jpg?2">
                                         </a>
@@ -358,7 +358,7 @@
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="mt-3 img-fluid"
                                                 src="https://91.233.198.11/_aps4497/assets/images/cardgames/domino-qq.jpg?2">
                                         </a>
@@ -366,7 +366,7 @@
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="mt-3 img-fluid"
                                                 src="https://91.233.198.11/_aps4497/assets/images/cardgames/ceme.jpg?2">
                                         </a>
@@ -374,7 +374,7 @@
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="mt-3 img-fluid"
                                                 src="https://91.233.198.11/_aps4497/assets/images/cardgames/ceme-fighter.jpg?2">
                                         </a>
@@ -382,7 +382,7 @@
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="mt-3 img-fluid"
                                                 src="https://91.233.198.11/_aps4497/assets/images/cardgames/bolatangkas.jpg?2">
                                         </a>
@@ -391,7 +391,7 @@
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="mt-3 img-fluid"
                                                 src="https://91.233.198.11/_aps4497/assets/images/cardgames/poker-dealer.jpg?2">
                                         </a>
@@ -399,7 +399,7 @@
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="mt-3 img-fluid"
                                                 src="https://91.233.198.11/_aps4497/assets/images/cardgames/blackjack.jpg?2">
                                         </a>
@@ -407,7 +407,7 @@
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="mt-3 img-fluid"
                                                 src="https://91.233.198.11/_aps4497/assets/images/cardgames/bigtwo.jpg?2">
                                         </a>
@@ -415,7 +415,7 @@
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="mt-3 img-fluid"
                                                 src="https://91.233.198.11/_aps4497/assets/images/cardgames/joker-dealer.jpg?2">
                                         </a>
@@ -423,7 +423,7 @@
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="mt-3 img-fluid"
                                                 src="https://91.233.198.11/_aps4497/assets/images/cardgames/3kings-new.jpg?2">
                                         </a>
@@ -431,7 +431,7 @@
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="mt-3 img-fluid"
                                                 src="https://91.233.198.11/_aps4497/assets/images/cardgames/aduq-new.jpg?2">
                                         </a>
@@ -439,7 +439,7 @@
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="mt-3 img-fluid"
                                                 src="https://91.233.198.11/_aps4497/assets/images/cardgames/rgocasino-omaha.jpg?2">
                                         </a>
@@ -447,7 +447,7 @@
                                 </div>
                                 <div class="col-6 col-md-3">
                                     <div class="cardgame">
-                                        <a href="/register.html">
+                                        <a href="/frontent-assesment/register.html">
                                             <img class="mt-3 img-fluid"
                                                 src="https://91.233.198.11/_aps4497/assets/images/cardgames/rgocasino-super-10.jpg?2">
                                         </a>
