[ridho]- refactor page url nav - WIP

--- a/dingdong.html
+++ b/dingdong.html
@@ -95,7 +95,7 @@
                     <div id="navigation" style="width:100%; padding:0;">
                         <ul id="nav" style="width:100%; padding:0;">
                             <li class="nav-item first-nav-item">
-                                <a href="/frontent-assesment/" class="nav-a">
+                                <a href="/frontend-assesment/" class="nav-a">
                                     <span>
                                         <strong>Home</strong>
                                     </span>
@@ -222,7 +222,7 @@
                             </a>
                         </div>
                         <div class="col-6 text-center">
-                            <a href="/frontent-assesment/">
+                            <a href="/frontend-assesment/">
                                 <img src="https://91.233.198.11/m/assets/images/logo-rgocasino.png" width="170px"
                                     style="margin-top:6px;max-width:100%">
                             </a>
@@ -295,7 +295,7 @@
                     <h5 class="text-sm fw-bold">Menu</h5>
                     <div class="row" style="margin-bottom: 0px;">
                         <div class="col-4 text-center">
-                            <a href="/frontent-assesment/" class="btn btn-sm btn-info font-white" style="width:100%;font-size:10px;">
+                            <a href="/frontend-assesment/" class="btn btn-sm btn-info font-white" style="width:100%;font-size:10px;">
                                 <i class="fa fa-home"></i><br>Home
                             </a>
                         </div>
